# cira

./: .env.example  .gitignore  AGENTS.md  AUDIENCE_JTBD_v1.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  WORK_SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  progress.txt  tasks.json
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/analysis/: __init__.py  prompts.py  synthesis.py
backend/app/api/: __init__.py
backend/app/crawlers/: __init__.py  browser_manager.py  crawl_worker.py  external_links.py  (+6 more)
backend/tests/: conftest.py  test_analysis_edge_cases.py  test_analysis_integration.py  test_analysis_prompts.py  test_analysis_synthesis.py  test_anthropic_service.py  test_api_crawl_integration.py  test_app.py  test_batch_api.py  test_batch_api_integration.py  test_batch_edge_cases.py  test_batch_integration.py  test_batch_queue_api.py  test_batch_queue_service.py  test_browser_manager.py  test_celery.py  test_checkpoint_service.py  test_companies_api.py  test_config.py  test_control_api.py  test_control_api_integration.py  test_crawl_edge_cases.py  test_crawl_integration.py  test_crawl_worker.py  test_deduplicator.py  test_entities_api_integration.py  test_entity_extractor.py  test_export_api.py  test_export_api_integration.py  test_export_edge_cases.py  test_export_integration.py  test_export_service.py  test_external_links.py  test_extraction_edge_cases.py  test_extraction_integration.py  test_health.py  test_job_recovery.py  test_job_service.py  test_migrations.py  test_models.py  (+18 more)
(+239 files in other folders)
