[project]
name = "cira-backend"
version = "1.0.0"
description = "CIRA Backend - Company Intelligence Research Assistant"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv", "migrations"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["venv", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | migrations
)/
'''
